--- a/src/app/sections/discover/discover.component.html
+++ b/src/app/sections/discover/discover.component.html
@@ -27,9 +27,9 @@
         <img src="assets/images/lol-logo.jpg" alt="League of Legends" />
       </button>
 
-      <button class="btn btn-circle" type="button" (click)="selectedGame = 'lol'"
-        [ngClass]="{ 'active': selectedGame === 'lol' }">
-        <img src="assets/images/valorant-home.jpg" alt="League of Legends" />
+      <button class="btn btn-circle" type="button" (click)="selectedGame = 'valorant'"
+        [ngClass]="{ 'active': selectedGame === 'valorant' }">
+        <img src="assets/images/valorant-home.jpg" alt="valorant" />
       </button>
     </div>
 
@@ -250,7 +250,147 @@
       </div>
       }
       }
+ @case ('valorant') {
+      <div class="wiki-content">
+        <h3 class="text-warning">Valorant</h3>
+        <p>Descubre a fondo a los agentes, sus habilidades tácticas y los armamentos más usados en cada situación. Una guía esencial para dominar el ritmo vertiginoso y estratégico del mundo de Valorant.</p>
+      </div>
+      <div class="wiki-subsections d-flex flex-wrap gap-3 justify-content-center mt-4">
+        <button (click)="getValoranabilities()" class="btn btn-circle-sm" title="abilities">
+          <img src="assets/icons/abilities.png" alt="abilities">
+        </button>
 
+        <button (click)="getValorantagents()" class="btn btn-circle-sm" title="heores">
+          <img src="assets/icons/heores.png" alt="agents">
+        </button>
+
+        <button (click)="getValorantmaps()" class="btn btn-circle-sm" title="items">
+          <img src="assets/icons/items.png" alt="maps">
+        </button>
+
+         <button (click)="getValorantweapons()" class="btn btn-circle-sm" title="items">
+          <img src="assets/icons/items.png" alt="weapons">
+        </button>
+
+      </div>
+
+      @if (currentView === 'vagents') {
+      <div class="row g-4 justify-content-center mt-4">
+        @for (p of vagents; track $index) {
+        <div class="col-12 col-md-6 col-lg-4 d-flex">
+          <div
+            class="recommended-card bg-dark border border-secondary p-4 rounded text-light shadow h-100 w-100 mx-auto text-center">
+            <h5 class="mb-3 text-info">
+              <i class="bi bi-geo-alt-fill me-2"></i>{{ p.name }}
+            </h5>
+            <img [src]="p.portrait_url" alt="Mapa de {{ p.name }}" class="img-fluid rounded mb-2 shadow-sm mx-auto d-block"
+              style="max-width: 180px; height: auto;">
+          </div>
+        </div>
+        }
+      </div>
+      }
+      @if (currentView === 'vweapons') {
+      <div class="row g-4 justify-content-center mt-4">
+        @for (p of vweapons; track $index) {
+        <div class="col-12 col-md-6 col-lg-4 d-flex">
+          <div
+            class="recommended-card bg-dark border border-secondary p-4 rounded text-light shadow h-100 w-100 mx-auto text-center">
+            <h5 class="mb-3 text-info">
+              <i class="bi bi-geo-alt-fill me-2"></i>{{ p.name }}
+            </h5>
+            <img [src]="p.image_url" alt="Mapa de {{ p.name }}" class="img-fluid rounded mb-2 shadow-sm mx-auto d-block"
+              style="max-width: 180px; height: auto;">
+          </div>
+        </div>
+        }
+      </div>
+      }
+      @if (currentView === 'vabilities') {
+      <div class="row g-4 justify-content-center mt-4">
+        @for (p of vabilities; track $index) {
+        <div class="col-12 col-md-6 col-lg-4 d-flex">
+          <div
+            class="recommended-card bg-dark border border-secondary p-4 rounded text-light shadow h-100 w-100 mx-auto text-center">
+            <h5 class="mb-3 text-info">
+              <i class="bi bi-geo-alt-fill me-2"></i>{{ p.name }}
+            </h5>
+            <img [src]="p.image_url" alt="Mapa de {{ p.name }}" class="img-fluid rounded mb-2 shadow-sm mx-auto d-block"
+              style="max-width: 180px; height: auto;">
+          </div>
+        </div>
+        }
+      </div>
+      }
+       @if (currentView === 'vmaps') {
+      <div class="row g-4 justify-content-center mt-4">
+        @for (p of vmaps; track $index) {
+        <div class="col-12 col-md-6 col-lg-4 d-flex">
+          <div
+            class="recommended-card bg-dark border border-secondary p-4 rounded text-light shadow h-100 w-100 mx-auto text-center">
+            <h5 class="mb-3 text-info">
+              <i class="bi bi-geo-alt-fill me-2"></i>{{ p.name }}
+            </h5>
+            <img [src]="p.image_url" alt="Mapa de {{ p.name }}" class="img-fluid rounded mb-2 shadow-sm mx-auto d-block"
+              style="max-width: 180px; height: auto;">
+          </div>
+        </div>
+        }
+      </div>
+      }
+
+      }
+      @case ('csgo') {
+      <div class="wiki-content">
+        <h3 class="text-warning">CS:GO</h3>
+        <p>Explora los mapas, armas y versiones que han definido a Counter-Strike como el shooter táctico por
+          excelencia. Aquí descubrirás lo que necesitas para convertirte en un experto del <i>gameplay</i> base.</p>
+      </div>
+      <div class="wiki-subsections d-flex flex-wrap gap-3 justify-content-center mt-4">
+
+        <button (click)="getCSGOmaps()" class="btn btn-circle-sm" title="maps">
+          <img src="assets/icons/maps.png" alt="maps">
+        </button>
+
+        <button (click)="getCSGOweapons()" class="btn btn-circle-sm" title="weapons">
+          <img src="assets/icons/weapons.png" alt="weapons">
+        </button>
+      </div>
+
+      @if (currentView === 'maps') {
+      <div class="row g-4 justify-content-center mt-4">
+        @for (p of maps; track $index) {
+        <div class="col-12 col-md-6 col-lg-4 d-flex">
+          <div
+            class="recommended-card bg-dark border border-secondary p-4 rounded text-light shadow h-100 w-100 mx-auto text-center">
+            <h5 class="mb-3 text-info">
+              <i class="bi bi-geo-alt-fill me-2"></i>{{ p.name }}
+            </h5>
+            <img [src]="p.image_url" alt="Mapa de {{ p.name }}" class="img-fluid rounded mb-2 shadow-sm mx-auto d-block"
+              style="max-width: 180px; height: auto;">
+          </div>
+        </div>
+        }
+      </div>
+      }
+
+      @if (currentView === 'weapons') {
+      <div class="row g-4 justify-content-center mt-4">
+        @for (w of weapons; track $index) {
+        <div class="col-12 col-md-6 col-lg-4 d-flex">
+          <div
+            class="recommended-card bg-dark border border-secondary p-4 rounded text-light shadow h-100 w-100 mx-auto text-center">
+            <h5 class="mb-3 text-info">
+              <i class="bi bi-crosshair me-2"></i>{{ w.name }}
+            </h5>
+            <img [src]="w.image_url" alt="Arma: {{ w.name }}" class="img-fluid rounded mb-2 shadow-sm mx-auto d-block"
+              style="max-width: 180px; height: auto;">
+          </div>
+        </div>
+        }
+      </div>
+      }
+      }
       @default {
       <div class="wiki-content">
         <p class="text-muted">Selecciona un juego para ver su información.</p>
