--- a/src/app/sections/discover/discover.component.css
+++ b/src/app/sections/discover/discover.component.css
@@ -1,7 +1,7 @@
 /* ===== ESTILOS PRINCIPALES ===== */
 .section-wiki {
-  background-color: #000; 
-  min-height: 100vh; 
+  background-color: #000;
+  min-height: 100vh;
 }
 
 .esports-home {
@@ -127,8 +127,8 @@
   to { opacity: 1; transform: translateY(0); }
 }
 .btn-circle {
-  width: 100px;
-  height: 100px;
+  width: 140px;
+  height: 140px;
   border-radius: 50%;
   padding: 0;
   overflow: hidden;
@@ -219,10 +219,11 @@
 }
 
 .btn-circle-sm {
-  width: 60px;
-  height: 60px;
+  width: 70px;
+  height: 70px;
   border-radius: 50%;
   padding: 0;
+  margin-top: 40px;
   overflow: hidden;
   border: 2px solid transparent;
   background-color: #222;
@@ -243,7 +244,7 @@
   pointer-events: none;
   transition: filter 0.3s ease;
   position: absolute;
-  top: 0;
+  top: 20;
   left: 0;
   z-index: 0;
 }
