--- a/src/app/sections/discover/discover.component.html
+++ b/src/app/sections/discover/discover.component.html
@@ -29,7 +29,7 @@
 
       <button class="btn btn-circle" type="button" (click)="selectedGame = 'valorant'"
         [ngClass]="{ 'active': selectedGame === 'valorant' }">
-        <img src="assets/images/valorant-home.jpg" alt="valorant" />
+        <img src="assets/images/valorant-logo.png" alt="valorant" />
       </button>
     </div>
 
