--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,59 +1,47 @@
-<nav class="navbar navbar-expand-lg full-width-navbar">
-  <div class="d-flex flex-grow-1 justify-content-between align-items-center px-3">
+<nav class="navbar navbar-expand-lg full-width-navbar px-3">
+  <div class="container-fluid">
     <!-- Logo -->
     <a class="navbar-brand text-white" routerLink="/">
       <i class="bi bi-arrows-fullscreen"></i>
     </a>
 
-    <!-- Menú -->
-    <div class="d-none d-lg-block">
-      <ul class="navbar-nav flex-row gap-4">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/home" routerLinkActive="active">HOME</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/categories" routerLinkActive="active">CATEGORIES</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/discover" routerLinkActive="active">WIKI</a>
-        </li>
-        <li class="nav-item">
-          <a   class="nav-link" routerLink="/favs" routerLinkActive="active" *ngIf="isLoggedIn">FAVS</a>
-        </li>
-        <li class="nav-item">
-          <a   class="nav-link" routerLink="/aboutus" routerLinkActive="active">ABOUT US</a>
-        </li>
-      </ul>
+    <!-- Zona derecha visible solo en móvil -->
+    <div class="d-flex flex-row align-items-center d-lg-none gap-1 mobile-account-buttons">
+      <div class="virtual-coins d-flex align-items-center justify-content-center">
+        <i class="bi bi-coin coin-icon"></i>
+        <span class="coin-amount">{{ coins }}</span>
+      </div>
+
+      <ng-container *ngIf="authService.isLoggedIn()">
+        <a class="btn btn-register nav-link" routerLink="/account">ACCOUNT</a>
+        <button (click)="logout()" class="btn btn-register nav-link">LOG OUT</button>
+      </ng-container>
     </div>
 
-    <!-- Zona derecha -->
-    <div class="d-flex align-items-center gap-3">
+    <!-- Botón hamburguesa -->
+    <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMenu">
+      <span class="navbar-toggler-icon"><div></div></span>
+    </button>
 
-      <!-- Monedas -->
-      <div *ngIf="authService.isLoggedIn()" class="virtual-coins d-flex align-items-center">
-  <i class="bi bi-coin coin-icon"></i>
-  <span class="coin-amount">{{ coins }}</span>
-</div>
+    <!-- Menú colapsable -->
+    <div class="collapse navbar-collapse justify-content-between align-items-center" id="navbarMenu">
+      <ul class="navbar-nav flex-lg-row flex-column gap-3 gap-lg-4 text-center">
+        <li class="nav-item"><a class="nav-link" routerLink="/home" routerLinkActive="active">HOME</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="/categories" routerLinkActive="active">CATEGORIES</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="/discover" routerLinkActive="active">WIKI</a></li>
+        <li class="nav-item" *ngIf="isLoggedIn"><a class="nav-link" routerLink="/favs" routerLinkActive="active">FAVS</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="/aboutus" routerLinkActive="active">ABOUT US</a></li>
+      </ul>
 
-
-      <!-- Botones / Links dinámicos según login -->
-   <ng-container *ngIf="!authService.isLoggedIn()">
-  <a class="btn btn-register nav-link" routerLink="/register" routerLinkActive="active">REGISTER</a>
-  <a class="btn btn-register nav-link" routerLink="/login" routerLinkActive="active">LOG IN</a>
-</ng-container>
-
-<ng-container *ngIf="authService.isLoggedIn()">
-  <a class="btn btn-register nav-link" routerLink="/account" routerLinkActive="active">ACCOUNT</a>
-
-  <button (click)="logout()" class="btn btn-register nav-link">
-    LOG OUT
-  </button>
-</ng-container>
-
-
-
-
-
+      <!-- Zona derecha en escritorio -->
+      <div class="d-none d-lg-flex flex-row align-items-center gap-2 ms-lg-auto">
+        <div class="virtual-coins d-flex align-items-center">
+          <i class="bi bi-coin coin-icon"></i>
+          <span class="coin-amount">{{ coins }}</span>
+        </div>
+        <a class="btn btn-register nav-link" routerLink="/account">ACCOUNT</a>
+        <button (click)="logout()" class="btn btn-register nav-link">LOG OUT</button>
+      </div>
     </div>
   </div>
 </nav>
