--- a/src/app/sections/discover/discover.component.html
+++ b/src/app/sections/discover/discover.component.html
@@ -14,22 +14,22 @@
     <div class="wiki-filters d-flex justify-content-center gap-4 mb-4">
       <button class="btn btn-circle" type="button" (click)="selectedGame = 'dota2'"
         [ngClass]="{ 'active': selectedGame === 'dota2' }">
-        <img src="assets/images/dota2-logo.jpg" alt="Dota 2" />
+        <img src="assets/images/dota2-logo.jpg" alt="Dota 2 Logo" />
       </button>
 
       <button class="btn btn-circle" type="button" (click)="selectedGame = 'csgo'"
         [ngClass]="{ 'active': selectedGame === 'csgo' }">
-        <img src="/assets/images/csgo-logo.png" alt="CS:GO" />
+        <img src="/assets/images/csgo-logo.png" alt="CS:GO Logo" />
       </button>
 
       <button class="btn btn-circle" type="button" (click)="selectedGame = 'lol'"
         [ngClass]="{ 'active': selectedGame === 'lol' }">
-        <img src="assets/images/lol-logo.jpg" alt="League of Legends" />
+        <img src="assets/images/lol-logo.jpg" alt="League of Legends Logo" />
       </button>
 
       <button class="btn btn-circle" type="button" (click)="selectedGame = 'valorant'"
         [ngClass]="{ 'active': selectedGame === 'valorant' }">
-        <img src="assets/images/valorant-logo.png" alt="valorant" />
+        <img src="assets/images/valorant-logo.png" alt="valorant Logo" />
       </button>
     </div>
 
@@ -39,20 +39,20 @@
       @case ('dota2') {
       <div class="wiki-content">
         <h3 class="text-warning">Dota 2</h3>
-        <p>Conoce a fondo a los héroes, sus habilidades únicas y los objetos más decisivos del juego. Una guía esencial
-          para entender el complejo y estratégico mundo de Dota 2.</p>
+        <p>Get to know the heroes in depth, their unique abilities, and the most decisive items in the game. An
+          essential guide to understanding the complex and strategic world of Dota 2.</p>
       </div>
       <div class="wiki-subsections d-flex flex-wrap gap-3 justify-content-center mt-4">
         <button (click)="getDota2Abilities()" class="btn btn-circle-sm" title="abilities">
-          <img src="assets/icons/abilities.png" alt="abilities">
+          <img src="assets/images/dota2-skills.jpg" alt="Dota 2 abilities">
         </button>
 
         <button (click)="getDota2heroes()" class="btn btn-circle-sm" title="heores">
-          <img src="assets/icons/heores.png" alt="heores">
+          <img src="assets/images/dota2-heroes.jpg" alt="Dota 2 heores">
         </button>
 
         <button (click)="getDota2items()" class="btn btn-circle-sm" title="items">
-          <img src="assets/icons/items.png" alt="items">
+          <img src="assets/images/dota2-items.jpg" alt="Dota 2 items">
         </button>
 
       </div>
@@ -110,17 +110,17 @@
       @case ('csgo') {
       <div class="wiki-content">
         <h3 class="text-warning">CS:GO</h3>
-        <p>Explora los mapas, armas y versiones que han definido a Counter-Strike como el shooter táctico por
-          excelencia. Aquí descubrirás lo que necesitas para convertirte en un experto del <i>gameplay</i> base.</p>
+        <p>Explore the maps, weapons, and versions that have defined Counter-Strike as the ultimate tactical shooter.
+          Here you'll discover everything you need to become an expert in core gameplay.</p>
       </div>
       <div class="wiki-subsections d-flex flex-wrap gap-3 justify-content-center mt-4">
 
         <button (click)="getCSGOmaps()" class="btn btn-circle-sm" title="maps">
-          <img src="assets/icons/maps.png" alt="maps">
+          <img src="assets/images/csgo-maps.png" alt="CSGO maps">
         </button>
 
         <button (click)="getCSGOweapons()" class="btn btn-circle-sm" title="weapons">
-          <img src="assets/icons/weapons.png" alt="weapons">
+          <img src="assets/images/csgo-weapons.jpg" alt="CSGO weapons">
         </button>
       </div>
 
@@ -162,24 +162,24 @@
       @case ('lol') {
       <div class="wiki-content">
         <h3 class="text-warning">League of Legends</h3>
-        <p>Sumérgete en el universo de League of Legends: descubre a sus campeones, objetos, runas y hechizos. Una guía
-          completa para entender sus mecánicas, su mundo y su estilo de juego único.</p>
+        <p>Dive into the universe of League of Legends: discover its champions, items, runes, and summoner spells. A
+          complete guide to understanding its mechanics, its world, and its unique playstyle.</p>
       </div>
       <div class="wiki-subsections d-flex flex-wrap gap-3 justify-content-center mt-4">
         <button (click)="getLolChampions()" class="btn btn-circle-sm" title="Champions">
-          <img src="assets/icons/champions.png" alt="Champions">
+          <img src="assets/images/lol-champions.jpg" alt="Lol Champions">
         </button>
 
         <button (click)="getLolItemns()" class="btn btn-circle-sm" title="Items">
-          <img src="assets/icons/items.png" alt="Items">
+          <img src="assets/images/lol-items.jpg" alt="Lol Items">
         </button>
 
         <button (click)="getLolrunes()" class="btn btn-circle-sm" title="Runes">
-          <img src="assets/icons/runes.png" alt="Runes">
+          <img src="assets/images/lol-runes.jpg" alt="Lol Runes">
         </button>
 
         <button (click)="getLolspells()" class="btn btn-circle-sm" title="Spells">
-          <img src="assets/icons/spells.png" alt="Spells">
+          <img src="assets/images/lol-spells.jpg" alt="Lol Spells">
         </button>
       </div>
       @if (currentView === 'lolchamps') {
@@ -199,7 +199,7 @@
         }
       </div>
       }
-       @if (currentView === 'lolitems') {
+      @if (currentView === 'lolitems') {
       <div class="row g-4 justify-content-center mt-4">
         @for (w of lolitems; track $index) {
         <div class="col-12 col-md-6 col-lg-4 d-flex">
@@ -216,7 +216,7 @@
         }
       </div>
       }
-       @if (currentView === 'lolspells') {
+      @if (currentView === 'lolspells') {
       <div class="row g-4 justify-content-center mt-4">
         @for (w of lolspells; track $index) {
         <div class="col-12 col-md-6 col-lg-4 d-flex">
@@ -233,7 +233,7 @@
         }
       </div>
       }
-       @if (currentView === 'lolrunes') {
+      @if (currentView === 'lolrunes') {
       <div class="row g-4 justify-content-center mt-4">
         @for (w of lolrunes; track $index) {
         <div class="col-12 col-md-6 col-lg-4 d-flex">
@@ -250,26 +250,27 @@
       </div>
       }
       }
- @case ('valorant') {
+      @case ('valorant') {
       <div class="wiki-content">
         <h3 class="text-warning">Valorant</h3>
-        <p>Descubre a fondo a los agentes, sus habilidades tácticas y los armamentos más usados en cada situación. Una guía esencial para dominar el ritmo vertiginoso y estratégico del mundo de Valorant.</p>
+        <p>Discover the agents in depth, their tactical abilities, and the most commonly used weapons in every
+          situation. An essential guide to mastering the fast-paced and strategic world of Valorant.</p>
       </div>
       <div class="wiki-subsections d-flex flex-wrap gap-3 justify-content-center mt-4">
         <button (click)="getValoranabilities()" class="btn btn-circle-sm" title="abilities">
-          <img src="assets/icons/abilities.png" alt="abilities">
+          <img src="assets/images/valorant-abilities.jpg" alt="Valorant abilities">
         </button>
 
-        <button (click)="getValorantagents()" class="btn btn-circle-sm" title="heores">
-          <img src="assets/icons/heores.png" alt="agents">
+        <button (click)="getValorantagents()" class="btn btn-circle-sm" title="heroes">
+          <img src="assets/images/valorant-heroes.jpg" alt="Valorant agents">
         </button>
 
-        <button (click)="getValorantmaps()" class="btn btn-circle-sm" title="items">
-          <img src="assets/icons/items.png" alt="maps">
+        <button (click)="getValorantmaps()" class="btn btn-circle-sm" title="maps">
+          <img src="assets/images/valorant-maps.jpg" alt="Valorant maps">
         </button>
 
-         <button (click)="getValorantweapons()" class="btn btn-circle-sm" title="items">
-          <img src="assets/icons/items.png" alt="weapons">
+        <button (click)="getValorantweapons()" class="btn btn-circle-sm" title="items">
+          <img src="assets/images/valorant-items.jpg" alt="Valorant weapons">
         </button>
 
       </div>
@@ -283,8 +284,8 @@
             <h5 class="mb-3 text-info">
               <i class="bi bi-geo-alt-fill me-2"></i>{{ p.name }}
             </h5>
-            <img [src]="p.portrait_url" alt="Mapa de {{ p.name }}" class="img-fluid rounded mb-2 shadow-sm mx-auto d-block"
-              style="max-width: 180px; height: auto;">
+            <img [src]="p.portrait_url" alt="Mapa de {{ p.name }}"
+              class="img-fluid rounded mb-2 shadow-sm mx-auto d-block" style="max-width: 180px; height: auto;">
           </div>
         </div>
         }
@@ -322,7 +323,7 @@
         }
       </div>
       }
-       @if (currentView === 'vmaps') {
+      @if (currentView === 'vmaps') {
       <div class="row g-4 justify-content-center mt-4">
         @for (p of vmaps; track $index) {
         <div class="col-12 col-md-6 col-lg-4 d-flex">
@@ -338,62 +339,10 @@
         }
       </div>
       }
-
-      }
-      @case ('csgo') {
-      <div class="wiki-content">
-        <h3 class="text-warning">CS:GO</h3>
-        <p>Explora los mapas, armas y versiones que han definido a Counter-Strike como el shooter táctico por
-          excelencia. Aquí descubrirás lo que necesitas para convertirte en un experto del <i>gameplay</i> base.</p>
-      </div>
-      <div class="wiki-subsections d-flex flex-wrap gap-3 justify-content-center mt-4">
-
-        <button (click)="getCSGOmaps()" class="btn btn-circle-sm" title="maps">
-          <img src="assets/icons/maps.png" alt="maps">
-        </button>
-
-        <button (click)="getCSGOweapons()" class="btn btn-circle-sm" title="weapons">
-          <img src="assets/icons/weapons.png" alt="weapons">
-        </button>
-      </div>
-
-      @if (currentView === 'maps') {
-      <div class="row g-4 justify-content-center mt-4">
-        @for (p of maps; track $index) {
-        <div class="col-12 col-md-6 col-lg-4 d-flex">
-          <div
-            class="recommended-card bg-dark border border-secondary p-4 rounded text-light shadow h-100 w-100 mx-auto text-center">
-            <h5 class="mb-3 text-info">
-              <i class="bi bi-geo-alt-fill me-2"></i>{{ p.name }}
-            </h5>
-            <img [src]="p.image_url" alt="Mapa de {{ p.name }}" class="img-fluid rounded mb-2 shadow-sm mx-auto d-block"
-              style="max-width: 180px; height: auto;">
-          </div>
-        </div>
-        }
-      </div>
-      }
-
-      @if (currentView === 'weapons') {
-      <div class="row g-4 justify-content-center mt-4">
-        @for (w of weapons; track $index) {
-        <div class="col-12 col-md-6 col-lg-4 d-flex">
-          <div
-            class="recommended-card bg-dark border border-secondary p-4 rounded text-light shadow h-100 w-100 mx-auto text-center">
-            <h5 class="mb-3 text-info">
-              <i class="bi bi-crosshair me-2"></i>{{ w.name }}
-            </h5>
-            <img [src]="w.image_url" alt="Arma: {{ w.name }}" class="img-fluid rounded mb-2 shadow-sm mx-auto d-block"
-              style="max-width: 180px; height: auto;">
-          </div>
-        </div>
-        }
-      </div>
-      }
       }
       @default {
       <div class="wiki-content">
-        <p class="text-muted">Selecciona un juego para ver su información.</p>
+        <p class="text-muted">Select a game to view its information.</p>
       </div>
       }
       }
