--- a/src/app/sections/favs/favs.component.html
+++ b/src/app/sections/favs/favs.component.html
@@ -106,7 +106,7 @@
                 <i class="bi bi-tag-fill me-1 text-warning"></i>{{ fav.itemType }}
               </span>
 
-              <button class="btn btn-sm btn-danger" (click)="removeFavorite(fav.id)">
+              <button class="btn btn-sm btn-danger" (click)="removeFavorite(fav.favoriteId)">
                 <i class="bi bi-trash-fill me-1"></i>Eliminar
               </button>
 
