--- a/src/app/sections/discover/discover.component.html
+++ b/src/app/sections/discover/discover.component.html
@@ -43,17 +43,20 @@
           essential guide to understanding the complex and strategic world of Dota 2.</p>
       </div>
       <div class="wiki-subsections d-flex flex-wrap gap-3 justify-content-center mt-4">
-        <button (click)="getDota2Abilities()" class="btn btn-circle-sm" [ngClass]="{ 'active': currentView === 'abilities' }" title="abilities">
+        <button (click)="getDota2Abilities()" class="btn btn-circle-sm"
+          [ngClass]="{ 'active': currentView === 'abilities' }" title="abilities">
           <img src="assets/images/dota2-skills.jpg" alt="Dota 2 abilities">
           <span class="btn-label">Abilities</span>
         </button>
 
-        <button (click)="getDota2heroes()" class="btn btn-circle-sm" [ngClass]="{ 'active': currentView === 'heroes' }" title="heroes">
+        <button (click)="getDota2heroes()" class="btn btn-circle-sm" [ngClass]="{ 'active': currentView === 'heroes' }"
+          title="heroes">
           <img src="assets/images/dota2-heroes.jpg" alt="Dota 2 heroes">
           <span class="btn-label">Heroes</span>
         </button>
 
-        <button (click)="getDota2items()" class="btn btn-circle-sm" [ngClass]="{ 'active': currentView === 'items' }" title="items">
+        <button (click)="getDota2items()" class="btn btn-circle-sm" [ngClass]="{ 'active': currentView === 'items' }"
+          title="items">
           <img src="assets/images/dota2-items.jpg" alt="Dota 2 items">
           <span class="btn-label">Items</span>
         </button>
@@ -63,48 +66,44 @@
       @if (currentView === 'heroes') {
       <div class="row g-4 justify-content-center mt-4">
         @for (p of dotaheores; track $index) {
-        <div class="col-12 col-md-6 col-lg-4 d-flex">
-          <div
-            class="recommended-card bg-dark border border-secondary p-4 rounded text-light shadow h-100 w-100 mx-auto text-center">
-            <h5 class="mb-3 text-info">
-              <i class="bi bi-geo-alt-fill me-2"></i>{{ p.name }}
-            </h5>
-            <img [src]="p.image_url" alt="Mapa de {{ p.name }}" class="img-fluid rounded mb-2 shadow-sm mx-auto d-block"
-              style="max-width: 180px; height: auto;">
+        <div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center">
+          <div class="recommended-card bg-dark border border-secondary shadow">
+            <img [src]="p.image_url" alt="{{ p.name }}" />
           </div>
+          <h5 class="card-title-outside">
+            <i class="bi bi-emoji-sunglasses-fill heroe-icon me-2"></i>{{ p.name }}
+          </h5>
         </div>
         }
       </div>
       }
       @if (currentView === 'items') {
-      <div class="row g-4 justify-content-center mt-4">
-        @for (p of dotaItems; track $index) {
-        <div class="col-12 col-md-6 col-lg-4 d-flex">
-          <div
-            class="recommended-card bg-dark border border-secondary p-4 rounded text-light shadow h-100 w-100 mx-auto text-center">
-            <h5 class="mb-3 text-info">
-              <i class="bi bi-geo-alt-fill me-2"></i>{{ p.name }}
-            </h5>
-            <img [src]="p.image_url" alt="Mapa de {{ p.name }}" class="img-fluid rounded mb-2 shadow-sm mx-auto d-block"
-              style="max-width: 180px; height: auto;">
+      <div class="row g-4 justify-content-center mt-5">
+        @for(p of dotaItems; track $index) {
+        <div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center">
+          <div class="recommended-card bg-dark border border-secondary shadow">
+            <img [src]="p.image_url" alt="{{ p.name }}" />
           </div>
+          <h5 class="card-title-outside">
+            <i class="bi bi-shield-shaded item-icon me-2"></i>{{ p.name }}
+          </h5>
         </div>
         }
       </div>
       }
       @if(currentView === 'abilities') {
-        <div class="row g-4 justify-content-center mt-5">
-          @for(p of dotaAbilities; track $index) {
-          <div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center">
-            <div class="recommended-card bg-dark border border-secondary shadow">
-              <img [src]="p.image_url" alt="{{ p.name }}" />
-            </div>
-            <h5 class="card-title-outside">
-              <i class="bi bi-geo-alt-fill me-2"></i>{{ p.name }}
-            </h5>
+      <div class="row g-4 justify-content-center mt-5">
+        @for(p of dotaAbilities; track $index) {
+        <div class="col-12 col-md-6 col-lg-4 d-flex flex-column align-items-center">
+          <div class="recommended-card bg-dark border border-secondary shadow">
+            <img [src]="p.image_url" alt="{{ p.name }}" />
           </div>
-          }
+          <h5 class="card-title-outside">
+            <i class="bi bi-fire hero-icon me-2"></i>{{ p.name }}
+          </h5>
         </div>
+        }
+      </div>
       }
 
       }
@@ -116,12 +115,14 @@
       </div>
       <div class="wiki-subsections d-flex flex-wrap gap-3 justify-content-center mt-4">
 
-        <button (click)="getCSGOmaps()" class="btn btn-circle-sm" [ngClass]="{ 'active': currentView === 'maps' } "title="maps">
+        <button (click)="getCSGOmaps()" class="btn btn-circle-sm" [ngClass]="{ 'active': currentView === 'maps' } "
+          title="maps">
           <img src="assets/images/csgo-maps.png" alt="CSGO maps">
           <span class="btn-label">Maps</span>
         </button>
 
-        <button (click)="getCSGOweapons()" class="btn btn-circle-sm" [ngClass]="{ 'active': currentView === 'weapons' }" title="weapons">
+        <button (click)="getCSGOweapons()" class="btn btn-circle-sm" [ngClass]="{ 'active': currentView === 'weapons' }"
+          title="weapons">
           <img src="assets/images/csgo-weapons.jpg" alt="CSGO weapons">
           <span class="btn-label">Weapons</span>
         </button>
@@ -169,22 +170,26 @@
           complete guide to understanding its mechanics, its world, and its unique playstyle.</p>
       </div>
       <div class="wiki-subsections d-flex flex-wrap gap-3 justify-content-center mt-4">
-        <button (click)="getLolChampions()" class="btn btn-circle-sm" [ngClass]="{ 'active': currentView === 'lolchamps' }" title="Champions">
+        <button (click)="getLolChampions()" class="btn btn-circle-sm"
+          [ngClass]="{ 'active': currentView === 'lolchamps' }" title="Champions">
           <img src="assets/images/lol-champions.jpg" alt="Lol Champions">
           <span class="btn-label">Champions</span>
         </button>
 
-        <button (click)="getLolItemns()" class="btn btn-circle-sm" [ngClass]="{ 'active': currentView === 'lolitems' }" title="Items">
+        <button (click)="getLolItemns()" class="btn btn-circle-sm" [ngClass]="{ 'active': currentView === 'lolitems' }"
+          title="Items">
           <img src="assets/images/lol-items.jpg" alt="Lol Items">
           <span class="btn-label">Items</span>
         </button>
 
-        <button (click)="getLolrunes()" class="btn btn-circle-sm" [ngClass]="{ 'active': currentView === 'lolrunes' }" title="Runes">
+        <button (click)="getLolrunes()" class="btn btn-circle-sm" [ngClass]="{ 'active': currentView === 'lolrunes' }"
+          title="Runes">
           <img src="assets/images/lol-runes.jpg" alt="Lol Runes">
           <span class="btn-label">Runes</span>
         </button>
 
-        <button (click)="getLolspells()" class="btn btn-circle-sm" [ngClass]="{ 'active': currentView === 'lolspells' }" title="Spells">
+        <button (click)="getLolspells()" class="btn btn-circle-sm" [ngClass]="{ 'active': currentView === 'lolspells' }"
+          title="Spells">
           <img src="assets/images/lol-spells.jpg" alt="Lol Spells">
           <span class="btn-label">Spells</span>
         </button>
@@ -264,22 +269,26 @@
           situation. An essential guide to mastering the fast-paced and strategic world of Valorant.</p>
       </div>
       <div class="wiki-subsections d-flex flex-wrap gap-3 justify-content-center mt-4">
-        <button (click)="getValoranabilities()" class="btn btn-circle-sm" [ngClass]="{'active': currentView === 'vabilities' }" title="abilities">
+        <button (click)="getValoranabilities()" class="btn btn-circle-sm"
+          [ngClass]="{'active': currentView === 'vabilities' }" title="abilities">
           <img src="assets/images/valorant-abilities.jpg" alt="Valorant abilities">
           <span class="btn-label">Abilities</span>
         </button>
 
-        <button (click)="getValorantagents()" class="btn btn-circle-sm" [ngClass]="{ 'active': currentView === 'vagents' }" title="heroes">
+        <button (click)="getValorantagents()" class="btn btn-circle-sm"
+          [ngClass]="{ 'active': currentView === 'vagents' }" title="heroes">
           <img src="assets/images/valorant-heroes.jpg" alt="Valorant agents">
           <span class="btn-label">Agents</span>
         </button>
 
-        <button (click)="getValorantmaps()" class="btn btn-circle-sm" [ngClass]="{ 'active': currentView === 'vmaps' }"  title="maps">
+        <button (click)="getValorantmaps()" class="btn btn-circle-sm" [ngClass]="{ 'active': currentView === 'vmaps' }"
+          title="maps">
           <img src="assets/images/valorant-maps.jpg" alt="Valorant maps">
           <span class="btn-label">Maps</span>
         </button>
 
-        <button (click)="getValorantweapons()" class="btn btn-circle-sm" [ngClass]="{ 'active': currentView === 'vweapons' }" title="items">
+        <button (click)="getValorantweapons()" class="btn btn-circle-sm"
+          [ngClass]="{ 'active': currentView === 'vweapons' }" title="items">
           <img src="assets/images/valorant-items.jpg" alt="Valorant weapons">
           <span class="btn-label">Weapons</span>
         </button>
